--- a/ScreenCapture/App.xaml
+++ b/ScreenCapture/App.xaml
@@ -9,7 +9,7 @@
 
         <materialDesign:MahAppsBundledTheme BaseTheme="Inherit"
                                             PrimaryColor="BlueGrey"
-                                            SecondaryColor="LightGreen" />
+                                            SecondaryColor="Teal" />
 
         <!-- MahApps -->
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
